submissions/0c3e1b9c1e2945608eb8930d02dc10b6/result.txt
Compile Error:/usr/src/main.cpp:1:1: error: 'gndf' does not name a type
    1 | gndf
      | ^~~~
